Pillar3-ContainerOrchestrators/examples/CRM/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: crm
  labels:
    app: crm
spec:
  selector:
    app: crm
  ports:
  - port: 8001
    targetPort: 8001
    name: http-gateway
    protocol: TCP
  type: ClusterIP
